bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u8.rs
use bitbybit::bitfield;

#[bitfield(u8, default = 0)]
struct Test {
    #[bit(8, rw)]
    field: bool,
}

fn main() {}
